@@ -97,6 +97,11 @@ AC_ARG_ENABLE(lv2,
   [ac_lv2="$enableval"],
   [ac_lv2="yes"])
 
+AC_ARG_ENABLE(lv2-ui-x11,
+  AS_HELP_STRING([--enable-lv2-ui-x11], [enable LV2 plug-in X11 UI support (default=yes)]),
+  [ac_lv2_ui_x11="$enableval"],
+  [ac_lv2_ui_x11="yes"])
+
 AC_ARG_ENABLE(lv2-external-ui,
   AS_HELP_STRING([--enable-lv2-external-ui], [enable LV2 plug-in External UI support (default=yes)]),
   [ac_lv2_external_ui="$enableval"],
@@ -562,10 +567,21 @@ if test "x$ac_lv2" = "xyes"; then
 fi
 
 if test "x$ac_lv2" = "xno"; then
-   lv2_external_ui="no"
+   ac_lv2_ui_x11="no"
+   ac_lv2_external_ui="no"
    ac_lv2_ui_idle="no"
    ac_lv2_ui_show="no"
    ac_lv2_programs="no"
+fi
+
+if test "x$ac_qt4" = "xyes"; then
+   ac_lv2_ui_x11="no"
+fi
+
+if test "x$ac_lv2_ui_x11" = "xyes"; then
+   AC_DEFINE(CONFIG_LV2_UI_X11, 1, [Define if LV2 X11 UI support is available.])
+else
+   AC_MSG_WARN([*** LV2 X11 UI support will be disabled.])
 fi
 
 if test "x$ac_lv2_external_ui" = "xyes"; then
@@ -680,6 +696,7 @@ echo "  JACK session support . . . . . . . . . . . . . . .: $ac_jack_session"
 echo "  JACK MIDI support  . . . . . . . . . . . . . . . .: $ac_jack_midi"
 echo "  ALSA MIDI support  . . . . . . . . . . . . . . . .: $ac_alsa_midi"
 echo "  LV2 plug-in build  . . . . . . . . . . . . . . . .: $ac_lv2"
+echo "  LV2 plug-in X11 UI support   . . . . . . . . . . .: $ac_lv2_ui_x11"
 echo "  LV2 plug-in External UI support  . . . . . . . . .: $ac_lv2_external_ui"
 echo "  LV2 plug-in UI Idle interface support  . . . . . .: $ac_lv2_ui_idle"
 echo "  LV2 plug-in UI Show interface support  . . . . . .: $ac_lv2_ui_show"
